# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia || is_fuchsia_host)

import("//build/dart/dart_library.gni")

dart_library("flutter_gallery") {
  disable_analysis = true
  package_name = "flutter_gallery"
  sources = []

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/url_launcher",
    "//third_party/dart-pkg/pub/connectivity",
    "//third_party/dart-pkg/pub/device_info",
    "//third_party/dart-pkg/pub/video_player",
  ]
}
